<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notification">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_daily_reminder"
            android:summaryOn="@string/turned_on"
            android:summaryOff="@string/turned_off"
            android:title="@string/daily_reminder_cat"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_release_reminder"
            android:summaryOn="@string/turned_on"
            android:summaryOff="@string/turned_off"
            android:title="@string/release_reminder_cat"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <Preference
            android:key="@string/key_locale_setting"
            android:summary="@string/setting_locale"
            android:title="@string/change_language"/>
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>